fix: Restore game and joystick visibility logic

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 {
 #game-wrapper {
     width: 100%;
     height: 100%;
+    display: none; /* Added back display: none; */
     position: absolute;
     top: 0;
     left: 0;
@@ -189,7 +190,7 @@ canvas {
     width: 100%;
     height: 100%;
     background-color: #90EE90; /* Lime Green */
-    display: flex; /* Changed from display: none; */
+    display: none; /* Changed back to display: none; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
